--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,10 +8,12 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+parse = "4.3.0"
 picasso = "2.71828"
 shapeofview = "1.4.7"
 
 [libraries]
+bolts-tasks = { module = "com.github.parse-community.Parse-SDK-Android:bolts-tasks", version.ref = "parse" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -20,6 +22,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+parse = { module = "com.github.parse-community.Parse-SDK-Android:parse", version.ref = "parse" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
 shapeofview = { module = "io.github.florent37:shapeofview", version.ref = "shapeofview" }
 
